kube/k8s-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
  namespace: sol-scale-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-service
      tier: backend
      track: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        cloud.google.com/neg: '{"ingress": true}'
      labels:
        app: store-service
        tier: backend
        track: stable
    spec:
      serviceAccountName: store-service
      containers:
        - name: store-service
          image: asia-southeast2-docker.pkg.dev/project-fc5426d4-53ee-47af-8fb/development/store-service
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "1Gi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: "/healthz"
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: "/healthz"
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 5

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.14.0
          args:
            - "--structured-logs"
            - "--port=5432"
            - "project-fc5426d4-53ee-47af-8fb:asia-southeast1:sol-scale"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: store-service
  namespace: sol-scale-dev
  labels:
    name: store-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 8000
      name: store-service
  selector:
    app: store-service
    tier: backend
