kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-service
  namespace: sol-scale-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ip-dev"
    networking.gke.io/managed-certificates: "store-service-cert"
spec:
  rules:
    - host: api-dev.solscale.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-service
                port:
                  number: 3000
    - host: dev.solscale.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solscale-web-app
                port:
                  number: 3000
